--- a/appendices.tex
+++ b/appendices.tex
@@ -68,21 +68,25 @@ $\varepsilon_0$ &vacuum permittivity, $8.85\cdot10^{-12}$ F/m\\
 $\varepsilon^{\rm(Loc)}_r$ &Relative permittivity in the local approximation\\
 $\mu_0$		&vacuum permeability, $1.25\cdot10^{-6}$ H/m \\
 $\mu^{\rm(Loc)}_r$ &relative permeability in the local approximation\\
-$\chi_e$ 	& Electric susceptibility\\
+
+$\epsr$ 	& Relative dielectric permittivity\\
+%% TODO add eps, epsLL, mu_r, mu_LL, and distinguish between the symmetric and Landau-Lifshitz form
+$\chi_e$, $\chi_m$ 	& Electric and magnetic susceptibility\\
 $\Neff$ 	& Effective index of refraction (of periodic medium)\\
 $\eeff$ 	& Effective permittivity\\
 $\meff$ 	& Effective permeability\\
 $\Zeff$ 	& Effective impedance\\
-$\ii$		& $\sqrt{-1}$\\
 $\rr$, $\brho$ 		& Radius vector\\
 $t$, $\tau$ 		& Time\\
 $\omega$ 	& Angular frequency\\
 $\kk$ 		& Wave vector in homogeneous medium\\
 $\KK$ 		& Bloch wave vector in periodic medium\\
-$\epsr$ 	& Relative dielectric permittivity\\
-$e$ 		& 2.718\ldots\\
-$h$ 		& Planck constant, $6.626\cdot 10^{-34}$ J s\\
+
+$\ii$		& Imaginary unit, $\ii^2 = -1$\\
+$e$ 		& Euler constant, $e = 2.718\ldots$\\
+$h$ 		& Planck constant, $h = 6.626\cdot 10^{-34}$ J s\\
 $\mathcal F$ 		& Fourier transform\\
+
  \bottomrule
  \end{tabular} \end{table}
 %}}}
