--- a/defs.tex
+++ b/defs.tex
@@ -1,20 +1,24 @@
 \newcommand{\again}{again}
 \newcommand{\E}{\mathbf{E}}
 \newcommand{\D}{\mathbf{D}}
-\newcommand{\Dsd}{{\mathbf{D}^\text{LL}}}
 \newcommand{\B}{\mathbf{B}}
 \newcommand{\HH}{\mathbf{H}}
+\newcommand{\Dsd}{{\mathbf{D}^\text{LL}}}
 \newcommand{\HHsd}{{\mathbf{H}^\text{LL}}}
-\newcommand{\epsrl}{\varepsilon_r}
-\newcommand{\murl}{\mu_r}
-\newcommand{\epsLL}{\varepsilon_r^\text{LL}}
+
+\newcommand{\epsrl}{\varepsilon_r} 		%% local
+\newcommand{\murl}{\mu_r}			
+\newcommand{\epsrn}{\varepsilon_r}		%% nonlocal symmetric - uses the same notation as for local, only arguments are (omega,k)
+\newcommand{\murn}{\mu_r}
+\newcommand{\epsLL}{\varepsilon_r^\text{LL}}	%% nonlocal Landau-Lifshitz
 \newcommand{\muLL}{\mu_r^\text{LL}}
-%\newcommand{\epsrl}{\varepsilon^{\rm(Loc)}_r}
-%\newcommand{\murl}{\mu^{\rm(Loc)}_r}
-\newcommand{\Neff}{N_{\text{eff} }}
+
+
+\newcommand{\Neff}{N_{\text{eff} }}		%% effective
 \newcommand{\Zeff}{Z_{\text{eff} }}
 \newcommand{\eeff}{\varepsilon_{\text{eff} }}
 \newcommand{\meff}{\mu_{\text{eff} }}
+
 \newcommand{\ii}{{\mathrm i}}
 \newcommand{\rr}{{\mathbf{r}}}
 \newcommand{\brho}{\boldsymbol{\rho}}
