--- a/t.tex
+++ b/t.tex
@@ -6,7 +6,7 @@
 \usepackage{graphicx,amsmath,amssymb,rotating,booktabs,url,color,enumitem}	\DeclareUrlCommand\url{\def\UrlLeft{<}\def\UrlRight{>}\urlstyle{tt}}  
 \usepackage{upgreek}
 
-\usepackage{biblatex}
+\usepackage{biblatex} %% [backend=bibtex]
 %\usepackage[style=/home/filip/d/biblatex-phys/phys, articletitle=true, biblabel=enumerate, chaptertitle=true,  
   %pageranges=true, sorting=none, isbn=false, url=false, doi=false, eprint=false, hyperref=true, firstinits=true]{biblatex}
 %\usepackage[unicode=true,pdftitle={\WorkTitle}, pdfauthor={\FirstandFamilyName}, bookmarks=true, colorlinks=true, breaklinks=true, urlcolor=black, citecolor=black, linkcolor=black, breaklinks=true, plainpages=false,pdfpagelabels=true]{hyperref}
@@ -28,20 +28,20 @@
 \chapter{Theory}
 \input{theory.tex}
 
-\chapter{Numerical methods}
-\input{numeric.tex}
-
-\chapter{Experimental methods}
-\input{expe.tex}
-
-\chapter{Results}
-\input{result.tex}
-
-\chapter{Conclusion}
-\input{conclusion.tex}
-%
-\chapter{Appendices}
-\input{appendices.tex}
+%% \chapter{Numerical methods}
+%% \input{numeric.tex}
+%% 
+%% \chapter{Experimental methods}
+%% \input{expe.tex}
+%% 
+%% \chapter{Results}
+%% \input{result.tex}
+%% 
+%% \chapter{Conclusion}
+%% \input{conclusion.tex}
+%% %
+%% \chapter{Appendices}
+%% \input{appendices.tex}
 
 \label{endtext} 
 \printbibliography
